--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
   "port": 8080,
   "domainwhitelist": [
-      "my-cdn-image.com"
+      "my-cdn-image.com",
+      "d10up9ll8onrxl.cloudfront.net",
+      "estaticos03.elmundo.es"
   ],
   "size": {
     "width": 2000,
