--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "port": 8080,
-  "domainwhitelist": [
+  "hostwhitelist": [
       "my-cdn-image.com",
       "d10up9ll8onrxl.cloudfront.net",
       "estaticos03.elmundo.es"
